--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,20 @@
 # ======================================================================
-# General site config
+# Site settings
 # ======================================================================
 
 name: "visual assault, llc"
 description: Internet Creators
 url: http://visual-assault.org
 
+# ======================================================================
+# Build settings
+# ======================================================================
 markdown: kramdown
-
-color: "#CA4A4C"
-
-highlighter: true
-
+paginate: 10
 permalink: pretty
+
+
+# ======================================================================
+# Options
+# ======================================================================
+color: "#CA4A4C"
