--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # ======================================================================
 
-name: "visual assault, llc"
+name: "visual assault"
 description: Internet Creators
 url: http://visual-assault.org
 
