Implemented core css layout with Pure css

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "homepage": "https://github.com/visual-assault/visual-assault.github.io",
   "authors": [
-    "0xADADA <0xadada.pub@0xadada.pub>"
+    "Ron. A @0xADADA"
   ],
   "description": "Website for visual assault, llc",
   "keywords": [
