#7 Implemented developer tools

--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,16 @@ markdown: kramdown
 paginate: 10
 permalink: pretty
 
-
 # ======================================================================
-# Options
+# Project settings
 # ======================================================================
-color: "#CA4A4C"
+exclude: [
+  bower.json,
+  Gemfile,
+  Gemfile.lock,
+  gruntfile.js,
+  package.json,
+  node_modules,
+  LICENSE,
+  README.md
+]
