--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "grunt-contrib-csslint": "^0.4.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-sass": "^0.9.2",
-    "grunt-data-uri": "^0.2.0"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-data-uri": "^0.2.0",
+    "grunt-jekyll": "^0.4.2"
   }
 }
