--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-cache-bust": "^0.4.13",
     "grunt-contrib-csslint": "^0.4.0",
@@ -16,6 +17,7 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-data-uri": "^0.2.0",
-    "grunt-jekyll": "^0.4.2"
+    "grunt-jekyll": "^0.4.2",
+    "grunt-postcss": "^0.5.5"
   }
 }
