--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-cache-bust": "^0.4.13",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-csslint": "^0.4.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-sass": "^0.9.2",
