Implemented Gulp.js build process
Moved away from Grunt.
Gulp is faster, asynchronous

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ exclude: [
   bower.json,
   Gemfile,
   Gemfile.lock,
-  gruntfile.js,
+  gulpfile.js,
   package.json,
   node_modules,
   LICENSE,
