--- a/.csslintrc.json
+++ b/.csslintrc.json
@@ -1,15 +1,12 @@
 {
-    /* Explicitly ignore */
     "adjoining-classes"            : false,
     "box-model"                    : false,
     "box-sizing"                   : false,
     "import"                       : false,
+    "important"                    : false,
+    "star-property-hack"           : false,
     "universal-selector"           : false,
-
-    /* Warnings */
     "regex-selectors"              : true,
-
-    /* Explicitly mark as errors */
     "known-properties"             : 2,
     "overqualified-elements"       : 2,
     "zero-units"                   : 2
