--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "grunt": "^0.4.5",
-    "grunt-cache-bust": "^0.4.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-csslint": "^0.4.0",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-data-uri": "^0.2.0",
-    "grunt-jekyll": "^0.4.2",
-    "grunt-postcss": "^0.5.5"
+    "browser-sync": "^2.8.2",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-csslint": "^0.2.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-replace": "^0.4.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2"
   }
 }
