--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "private": true,
   "devDependencies": {
     "browser-sync": "^2.8.2",
+    "del": "^2.0.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-csslint": "^0.2.0",
     "gulp-jshint": "^1.11.2",
     "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sass": "^2.0.4",
