--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 name: "visual assault"
 description: Internet Creators
-url: http://visual-assault.org
+url: https://visual-assault.org
 
 # ======================================================================
 # Build settings
